Add database and data processing scripts for participant analysis
- Create participants database and CSV files for knowledge mapping
- Implement data loading and processing functions in data.py
- Add experience analysis functions in experience.py
- Introduce visualization functions for boxplots and word clouds
- Establish knowledge heatmap generation in knowledge.py

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d251bb43",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "from app.knowledge import knowledge\n",
+    "from server.knowledge import knowledge\n",
     "\n",
     "knowledge('Agile Software Development Methods')"
    ]
