Mask email address in user story template for privacy

--- a/docs/participants/interactions_thematic_analysis/shared_link/P005.md
+++ b/docs/participants/interactions_thematic_analysis/shared_link/P005.md
@@ -28,7 +28,7 @@ For the sequential context, use the attached template to create a **DESCRIPTION*
 **WHEN:** \<action\>  
 **THEN:** \<postcondition(s)\>
 
-daniel.pereira@ufvjm.edu.br Change account
+\[E-MAIL\_MASK\] Change account
 
 Not shared
 
