Mask email address in user story template for privacy

--- a/docs/participants/interactions_thematic_analysis/shared_link/P005.md
+++ b/docs/participants/interactions_thematic_analysis/shared_link/P005.md
@@ -79,7 +79,7 @@ User said:
 
 **Questionnaire**  
 Answer the questionnaire below to evaluate the exercise applied from a laboratory class using a tool (ChatGPT), in which the student receives instructions on the topic of requirements elicitation and has the opportunity to apply it in practice.  
-daniel.pereira@ufvjm.edu.br Change account
+\[E-MAIL\_MASK\] Change account
 
 Not shared
 
