Update README and perception.py for improved execution instructions and main flow integration

--- a/docs/participants/interactions_thematic_analysis/shared_link/P002.md
+++ b/docs/participants/interactions_thematic_analysis/shared_link/P002.md
@@ -90,7 +90,7 @@ If you want, I can create this same model for another feature, such as chat with
  Deliver the flows following the template model.
 
 **ChatGPT said:**  
- Perfect, Bernardo\! Here are the flows (main and alternative) strictly following the template model you provided:
+ Perfect, [MASK_NAME]\! Here are the flows (main and alternative) strictly following the template model you provided:
 
 ✅ **USE CASE:** Subscribe to Weekly Deliveries
 
